# COIN-OR-OptimizationSuite

./: .gitattributes  .gitignore  .travis.yml  AUTHORS  Dependencies  Externals  INSTALL  Makefile.am  Makefile.in  README.md  appveyor.yml  coin.install.sh  configure  configure.ac  get.AllThirdParty  make_doxydocs.in  make_installer.in
COIN Optimization Suite/COIN Optimization Suite.xcodeproj/: project.pbxproj
COIN Optimization Suite/COIN Optimization Suite.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
COIN Optimization Suite/COIN Optimization Suite.xcodeproj/project.xcworkspace/xcuserdata/ted.xcuserdatad/: UserInterfaceState.xcuserstate
COIN Optimization Suite/COIN Optimization Suite.xcodeproj/xcuserdata/ted.xcuserdatad/xcschemes/: COIN Optimization Suite.xcscheme
Installer/: cainst.mpi  cainstw.mpi  confCoinAll.sh  cygwin.mpi  linux-x86_32-gcc4.4.5.mpi  linux-x86_64-gcc4.4.5.mpi  mingw-dll.mpi  mingw.mpi  prepareDoxyConfPDF.sh  win32-cygwin-gcc4.3.4.mpi  win32-mingw-gcc4.2.1.mpi  win32.mpi
Installer/files/doc/: Doxygen.html  cbcuserguide.html  coin.css
Installer/files/scripts/: addPath.sh  launch.sh  xdg-open
MSVisualStudio/v10/: CoinAll.sln
MSVisualStudio/v8/: CoinAll.sln
MSVisualStudio/v9/: CoinAll.sln
doxydoc/: doxygen.conf
scripts/: msvc9setup.py
